--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -13,29 +13,81 @@
         {% endblock %}
 
         {% block javascripts %}
+            <!-- Inclure les fichiers JavaScript de Bootstrap -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
         {% endblock %}
     </head>
     <body>
-
     {% block body %}
-        <div class="container-fluid"
-             style="width: 100vw;
-        height:100vh;
-background: rgb(215,202,180);
-background: linear-gradient(214deg, rgba(215,202,180,1) 59%, rgba(237,225,187,0.8855917366946778) 100%);
+    <div class="container-fluid"
+         style="
+             width: 100vw;
+            height:100vh;
+            background: rgb(215,202,180);
+            background: linear-gradient(214deg, rgba(215,202,180,1) 59%, rgba(237,225,187,0.8855917366946778) 100%);
 ">
-            <h1 class="text-center pt-5">Suivi des contacts - général</h1>
-            <div class="container-fluid">
-                <div class="py-2">
-                    <a class="bg-success-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_contact_new') }}">Nouveau contact</a>
-                    <a class="bg-success-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_filiales_new') }}">Nouvelle filiale</a>
-                    <a class="bg-success-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_assistantes_new') }}">Nouvelle assistante</a>
-                </div>
-                <div class="py-4">
-                    <a class="bg-warning-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_assistantes_index') }}">Liste des assistantes</a>
-                    <a class="bg-warning-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_filiales_index') }}">Liste des filiales</a>
-                </div>
+        <h1 class="text-center pt-5">Suivi des contacts - général</h1>
+        <div class="container-fluid">
+            <div class="py-2">
+                <a class="bg-success-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_contact_new') }}">Nouveau contact</a>
+                <a class="bg-success-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_filiales_new') }}">Nouvelle filiale</a>
+                <a class="bg-success-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_assistantes_new') }}">Nouvelle assistante</a>
             </div>
+            <div class="py-4">
+                <a class="bg-warning-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_assistantes_index') }}">Liste des assistantes</a>
+                <a class="bg-warning-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_filiales_index') }}">Liste des filiales</a>
+            </div>
+        </div>
+        <div class="accordion container-fluid py-5 " id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button bg-secondary-subtle text-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Statistiques
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show " aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+{#                    <div class="accordion-body">#}
+                        <div id="collapseOne" class="collapse show bg-secondary-subtle" aria-labelledby="headingOne" data-parent="#accordion">
+                            <div class="row" >
+                                <div class="col-6">
+                                    <table class="table table-striped">
+                                        <th class="bg-dark-subtle text-center">Status</th>
+                                        {% for statut in statuts %}
+                                            <tr>
+                                                <td {% if statut.statut == 'Pas de retour expert' %} class="bg-danger-subtle"
+                                                {% elseif statut.statut == 'En cours' %} class="bg-primary-subtle"
+                                                {% elseif statut.statut == 'Devis signé' %} class="bg-success-subtle"
+                                                {% elseif statut.statut == 'Annulé' %} class="bg-secondary-subtle"
+                                                {% elseif statut.statut == 'Pas de retour client'%} class="bg-warning-subtle"
+                                                {% else %} class=""{% endif %}>{{ statut.statut }} : {{ statut.nombre }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                        <tr>
+                                            <td>Total contacts : {{ statuts | length }}</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <div class="col-6" >
+                                    <table class="table table-striped">
+                                        <th class="bg-dark-subtle text-center">Origine</th>
+
+                                        {% for origine in origines %}
+                                            <tr>
+                                                <td>{{ origine.origine }} : {{ origine.nombre }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+{#                </div>#}
+            </div>
+
+        </div>
+        <div>
+
             <div class="container-fluid">
                 <table class="table table-striped text-center">
                     <tr class="">
@@ -48,6 +100,7 @@ background: linear-gradient(214deg, rgba(215,202,180,1) 59%, rgba(237,225,187,0.
                         <th>Origine</th>
                         <th>Suites</th>
                         <th>Statut</th>
+                        <th>Dernière MAJ</th>
                         <th>Action</th>
                     </tr>
                     {% for contact in contacts %}
@@ -67,6 +120,7 @@ background: linear-gradient(214deg, rgba(215,202,180,1) 59%, rgba(237,225,187,0.
                                 {% elseif contact.statut == 'Pas de retour client'%} class="btn bg-warning-subtle"
                                 {% else %} class=""{% endif %}>{{ contact.statut }}</a>
                             </td>
+                            <td class="fs-6">{{ contact.dateUpdate |date('d/m/y') }}</td>
                             <td><a class="btn bg-warning-subtle  text-black-50 " style="text-decoration: none" href="{{ path('app_contact_edit', {'id' : contact.id}) }}">modifier</a></td>
                         </tr>
 
@@ -76,7 +130,7 @@ background: linear-gradient(214deg, rgba(215,202,180,1) 59%, rgba(237,225,187,0.
         </div>
 
 
-    {% endblock %}
+        {% endblock %}
     </body>
     </html>
 {% endblock %}
