--- a/templates/assistantes/new.html.twig
+++ b/templates/assistantes/new.html.twig
@@ -4,19 +4,27 @@
 
 {% block body %}
     <h1 class="text-center p-5">Créer une nouvelle assistante</h1>
-    {{ form_start(form) }}
-    <div class="row justify-content-sm-center">
-        <div class="col-1">
-            <p class="text-center">{{ form_label(form.Nom) }}</p>
+    <div class="container-fluid w-25">
+        {{ form_start(form) }}
+        <div class="row ">
+            <div class="col-12">
+                {{ form_row(form.Nom) }}
+            </div>
         </div>
-        <div class="col-4">
-            {{ form_widget(form.Nom) }}
+        <div class="row">
+            <div class="col-4">
+                {{ form_widget(form.isActive) }}
+            </div>
+{#            {{ form_widget(form) }}#}
+            <div class="col-8 d-flex flex-row  justify-content-between">
+                <button class="btn bg-primary-subtle" >{{ button_label | default('Enregistrer') }}</button>
+                <a class="btn bg-info-subtle" href="{{ path('app_assistantes_index') }}">retour</a>
+            </div>
         </div>
-        <div class="col-2">
-            <button class="btn bg-primary-subtle" >{{ button_label | default('Enregistrer') }}</button>
-        </div>
-        <a href="{{ path('app_assistantes_index') }}">back to list</a>
+
+
     </div>
     {{ form_end(form) }}
+
 
 {% endblock %}
