--- a/templates/assistantes/new.html.twig
+++ b/templates/assistantes/new.html.twig
@@ -18,7 +18,7 @@
 {#            {{ form_widget(form) }}#}
             <div class="col-8 d-flex flex-row  justify-content-between">
                 <button class="btn bg-primary-subtle" >{{ button_label | default('Enregistrer') }}</button>
-                <a class="btn bg-info-subtle" href="{{ path('app_assistantes_index') }}">retour</a>
+                <a class="btn bg-info-subtle" href="{{ path('index') }}">retour</a>
             </div>
         </div>
 
