--- a/templates/assistantes/edit.html.twig
+++ b/templates/assistantes/edit.html.twig
@@ -1,13 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Assistantes{% endblock %}
+{% block title %}Nouvelle assistante{% endblock %}
 
 {% block body %}
-    <h1>Edit Assistantes</h1>
+    <h1 class="text-center p-5">Modifier une assistante</h1>
+    <div class="container-fluid w-25">
+        {{ form_start(form) }}
+        <div class="row ">
+            <div class="col-12">
+                {{ form_row(form.Nom) }}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                {{ form_widget(form.isActive) }}
+            </div>
+            {#            {{ form_widget(form) }}#}
+            <div class="col-8 d-flex flex-row  justify-content-between">
+                <button class="btn bg-primary-subtle" >{{ button_label | default('Enregistrer') }}</button>
+                <a class="btn bg-info-subtle" href="{{ path('index') }}">retour</a>
+            </div>
+        </div>
 
-    {{ include('assistantes/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_assistantes_index') }}">back to list</a>
+    </div>
+    {{ form_end(form) }}
 
-    {{ include('assistantes/_delete_form.html.twig') }}
+
 {% endblock %}
