--- a/templates/contact/new.html.twig
+++ b/templates/contact/new.html.twig
@@ -9,6 +9,7 @@
         <div class="container m-auto">
             {{ form_start(form) }}
             <div class="row">
+
                 <div class="col-2">{{ form_row(form.Assistante) }}</div>
                 <div class="col-2">{{ form_row(form.Civilite, {'label': 'Civilité'}) }}</div>
                 <div class="col-3">{{ form_row(form.Nom) }}</div>
@@ -27,15 +28,21 @@
                 <div class="col-4">{{ form_row(form.MotifContact) }}</div>
             </div>
             <div class="row">
-                <div class="col-4">{{ form_row(form.AdresseExpertise) }}</div>
-
-                <div class="col-4">{{ form_row(form.Intermediaire, {'label':'Intermédiaire'}) }}</div>
+                <div class="col-6">{{ form_row(form.AdresseExp, {'label': 'Adresse expertise'}) }}</div>
+                <div class="col-3">{{ form_row(form.CodePostalExp, {'label': 'Code postal expertise'}) }}</div>
+                <div class="col-3">{{ form_row(form.VilleExp, {'label': 'Ville expertise'}) }}</div>
             </div>
             <div class="row">
                 <div class="col-3">{{ form_row(form.Notes) }}</div>
                 <div class="col-3">{{ form_row(form.Suites) }}</div>
                 <div class="col-3">{{ form_row(form.Statut) }}</div>
                 <div class="col-3">{{ form_row(form.Prospects) }}</div>
+            </div>
+            <div class="row">
+                <div class="col-2">{{ form_row(form.Intermediaire, {'label':'Nom intermédiaire'}) }}</div>
+                <div class="col-6">{{ form_row(form.AdresseInter, {'label':'Adresse intermédiaire'}) }}</div>
+                <div class="col-2">{{ form_row(form.CodePostalInter, {'label':'Code postal intermédiaire'}) }}</div>
+                <div class="col-2">{{ form_row(form.VilleInter, {'label':'Ville intermédiaire'}) }}</div>
             </div>
             {{ form_widget(form) }}
             <button class="btn bg-primary-subtle">{{ button_label | default('Enregistrer') }}</button>
