--- a/templates/filiales/contacts.html.twig
+++ b/templates/filiales/contacts.html.twig
@@ -6,15 +6,15 @@
 {% block body %}
     <div class="container-fluid">
         <h1 class="text-center pt-5">Suivi des contacts {{ nomFiliale.Nom }}</h1>
-        <div class="container-fluid row m-auto">
-            <div class="col-6 d-flex flex-row justify-content-start">
-                <a class="btn bg-success-subtle  rounded-2 text-black-50 " style="text-decoration: none" href="{{ path('app_contact_new') }}">Nouveau contact</a>
-                <a class="btn bg-success-subtle  rounded-2 text-black-50 " style="text-decoration: none" href="{{ path('app_filiales_new') }}">Nouvelle filiale</a>
-                <a class=" btn bg-success-subtle  rounded-2 text-black-50 " style="text-decoration: none" href="{{ path('app_assistantes_new') }}">Nouvelle assistante</a>
+        <div class="container-fluid">
+            <div class="py-2">
+                <a class="bg-success-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_contact_new') }}">Nouveau contact</a>
+                <a class="bg-success-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_filiales_new') }}">Nouvelle filiale</a>
+                <a class="bg-success-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_assistantes_new') }}">Nouvelle assistante</a>
             </div>
-            <div class="col-6 d-flex flex-row justify-content-end">
-                <a class="btn bg-warning-subtle  rounded-2 text-black-50 " style="text-decoration: none" href="{{ path('app_assistantes_index') }}">Liste des assistantes</a>
-                <a class="btn bg-warning-subtle  rounded-2 text-black-50 " style="text-decoration: none" href="{{ path('app_filiales_index') }}">Liste des filiales</a>
+            <div class="py-4">
+                <a class="bg-warning-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_assistantes_index') }}">Liste des assistantes</a>
+                <a class="bg-warning-subtle p-2 rounded-2 text-black-50" style="text-decoration: none" href="{{ path('app_filiales_index') }}">Liste des filiales</a>
             </div>
         </div>
         <div class="accordion container-fluid py-5 " id="accordionExample">
@@ -82,7 +82,7 @@
                         <td>{{ contact.filiale }}</td>
                         <td>{{ contact.nom }}</td>
                         <td>{{ contact.telephone }}</td>
-                        <td>{{ contact.adresseExpertise }}</td>
+                        <td>{{ contact.adresseExp }} {{ contact.codePostalExp }} {{ contact.villeExp }}</td>
                         <td>{{ contact.origine }}</td>
                         <td>{{ contact.suites }}</td>
                         <td><a href="#"{% if contact.statut == 'Pas de retour expert' %} class="btn bg-danger-subtle"
